--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,6 +102,7 @@ strong{
         justify-content: center;
         align-items: flex-start;
         width: 80vw;
+        margin-bottom: 50px;
     }
     p{
         margin-bottom: 2px;
